# connect4

./: Cargo.toml  README.md  clippy.toml  index.html
src/: main.rs
src/my_io/: game.rs  inputs.rs
