[package]
name = "connect4"
version = "0.1.0"
edition = "2021"
description = "Connect 4 game written by Rust beginner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DorkNstein/connect4"
keywords = ["connect4", "game"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"